2002-08-06  Gary Thomas  <gary@chez-thomas.org>
2002-08-06  Motoya Kurotsu <kurotsu@allied-telesis.co.jp>	

	* src/ser16c550c.c: I/O channel data can't be constant - contains
	timeout information which can be changed.

2001-10-31  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/hal_mips_atlas.cdl: Indicate support of variable baud rates.

2001-07-20  David Woodhouse  <dwmw2@redhat.com>

	* src/redboot_cmds.c: Remove. Obsoleted by generic MIPS version.
	* cdl/hal_mips_atlas.cdl: Remove reference to $1

2001-04-27  Mark Salter  <msalter@redhat.com>

	* include/platform.inc (hal_intc_decode): Recognize all external
	interrupts.
	* include/plf_intr.h: Add external interrupts to list of supported
	interrupts.
	* src/platform.S: Allocate space for new interrupt vectors.

2001-03-09  Jesper Skov  <jskov@redhat.com>

	* src/redboot_cmds.c: Added (linux) exec command.
	* cdl/hal_mips_atlas.cdl: Build redboot cmd file.

2001-03-08  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_mips_atlas.cdl: Removed
	CYGINT_HAL_VIRTUAL_VECTOR_SUPPORT_GUARANTEED which is now the
	default.

2001-02-23  Gary Thomas  <gthomas@redhat.com>

	* misc/redboot_ROM.ecm: Renamed from redboot_ROM.cfg

	* misc/redboot_RAM.ecm: Renamed from redboot_RAM.cfg

2001-02-19  Nick Garnett  <nickg@cygnus.co.uk>

	* src/ser16c550c.c (cyg_hal_plf_serial_isr): Removed enable of
	interrupt under RedBoot, apparrently RedBoot already does this
	itself.

2001-02-15  Nick Garnett  <nickg@cygnus.co.uk>

	* src/ser16c550c.c (cyg_hal_plf_serial_isr): Added code to set up
	ctrl-c interrupt when in RedBoot.

	* src/platform.S:
	Added interrupt vector tables.

	* include/plf_io.h:
	Moved interrupt controller defines here from plf_intr.h.

	* include/plf_intr.h:
	Renumbered interrupts to make them correspond to the bits in the
	interrupt controller registers. Removed _MASK defines and
	CYGNUM_HAL_INTERRUPT_MASK() macro - now done with a shift.
	Moved intc register defines to plf_io.h.

	* include/platform.inc: