@@ -1,3 +1,14 @@
+2003-02-27  Nick Garnett  <nickg@calivar.com>
+
+	* include/plf_intr.h: Defined CYGNUM_HAL_INTERRUPT_RTC to
+	counter/compare register interrupt. Added implementations of
+	HAL_INTERRUPT_MASK, HAL_INTERRUPT_UNMASK, and
+	HAL_INTERRUPT_ACKNOWLEDGE that will work in eCos rather than just
+	RedBoot.
+
+	* src/plf_misc.c (hal_platform_init): Changed spelling of eCos for
+	the LED to match the official typography.
+
 2002-08-06  Gary Thomas  <gary@chez-thomas.org>
 2002-08-06  Motoya Kurotsu <kurotsu@allied-telesis.co.jp>	
 
